force-app/main/default/objects/ServiceDelivery__c/ServiceDelivery__c.object-meta.xml
<!--
  ~ /*
  ~  * Copyright (c) 2020, salesforce.com, inc.
  ~  * All rights reserved.
  ~  * SPDX-License-Identifier: BSD-3-Clause
  ~  * For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause
  ~  */
  -->

<CustomObject>
    <label>Service Delivery</label>
    <nameField>
        <label>Service Delivery Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Deliveries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>