force-app/main/default/objects/ServiceDelivery__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Add a lookup to the Household Account if the Service Delivery benefits members of the Contact's Household Account. For example, meals from a food bank. If it benefit only one Contact, leave blank.</description>
    <inlineHelpText>Add a lookup to the Household Account if the Service Delivery benefits members of the Contact's Household Account. For example, meals from a food bank. If it benefit only one Contact, leave blank.</inlineHelpText>
    <label>Household Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Deliveries</relationshipLabel>
    <relationshipName>ServiceDeliveries</relationshipName>
    <type>Lookup</type>
</CustomField>