force-app/main/default/objects/ServiceDelivery__c/fields/AutonameOverride__c.field-meta.xml
<CustomField>
    <fullName>AutonameOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this checkbox is checked, the Service Name can be edited after it has been created by the Process Builder process Template: Service Delivery.</description>
    <inlineHelpText>When this checkbox is checked, the Service Name can be edited after it has been created by the Process Builder process Template: Service Delivery.</inlineHelpText>
    <label>Auto-name Override</label>
    <type>Checkbox</type>
</CustomField>