force-app/main/default/objects/ServiceDelivery__c/fields/DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Delivery Date</label>
    <type>DateTime</type>
</CustomField>