force-app/main/default/objects/ServiceDelivery__c/fields/HouseholdBenefit__c.field-meta.xml
<CustomField>
    <fullName>HouseholdBenefit__c</fullName>
    <formula>NOT(ISBLANK(Account__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Household Benefit</label>
    <type>Checkbox</type>
</CustomField>