force-app/main/default/objects/ServiceDelivery__c/fields/ProgramEngagement__c.field-meta.xml
<CustomField>
    <fullName>ProgramEngagement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Program Engagement</label>
    <referenceTo>ProgramEngagement__c</referenceTo>
    <relationshipLabel>Service Deliveries</relationshipLabel>
    <relationshipName>ServiceDeliveries</relationshipName>
    <type>Lookup</type>
</CustomField>