force-app/main/default/objects/ServiceDelivery__c/fields/Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Provider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Deliveries (Service Provider)</relationshipLabel>
    <relationshipName>Service_Deliveries1</relationshipName>
    <type>Lookup</type>
</CustomField>