force-app/main/default/objects/ServiceDelivery__c/fields/ServiceProvider__c.field-meta.xml
<CustomField>
    <fullName>ServiceProvider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>An internal service provider or a partner organization&#39;s service provider that&#39;s been added as a Contact in your database.</description>
    <inlineHelpText>An internal service provider or a partner organization&#39;s service provider that&#39;s been added as a Contact in your database.</inlineHelpText>
    <label>Service Provider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Deliveries (Service Provider)</relationshipLabel>
    <relationshipName>ServiceDeliveries</relationshipName>
    <type>Lookup</type>
</CustomField>