force-app/main/default/objects/ServiceDelivery__c/fields/ServiceSchedule__c.field-meta.xml
<CustomField>
    <fullName>ServiceSchedule__c</fullName>
    <formula>ServiceSession__r.ServiceSchedule__c</formula>
    <label>Service Schedule</label>
    <type>Text</type>
</CustomField>