force-app/main/default/objects/ServiceDelivery__c/fields/ServiceSession__c.field-meta.xml
<CustomField>
    <fullName>ServiceSession__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Session</label>
    <referenceTo>ServiceSession__c</referenceTo>
    <relationshipLabel>Service Deliveries</relationshipLabel>
    <relationshipName>Service_Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>