force-app/main/default/objects/ServiceDelivery__c/fields/UnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>UnitOfMeasure__c</fullName>
    <formula>Service__r.UnitOfMeasure__c</formula>
    <label>Unit of Measure</label>
    <type>Text</type>
</CustomField>