force-app/main/default/objects/ServiceDelivery__c/fields/UnitOfMeasurement__c.field-meta.xml
<CustomField>
    <fullName>UnitOfMeasurement__c</fullName>
    <description>A formula field that displays the UnitOfMeasurement__c field from the Service object.</description>
    <inlineHelpText>A formula field that displays the UnitOfMeasurement field from the Service object.</inlineHelpText>
    <formula>Service__r.UnitOfMeasurement__c</formula>
    <label>Unit of Measurement</label>
    <type>Text</type>
</CustomField>