force-app/main/default/objects/ServiceDelivery__c/fields/UnitOfService__c.field-meta.xml
<CustomField>
    <fullName>UnitOfMeasurement__c</fullName>
    <formula>Service__r.UnitOfMeasurement__c</formula>
    <label>Unit of Service</label>
    <type>Text</type>
</CustomField>