force-app/main/default/objects/ServiceDelivery__c/validationRules/PROGRAM_MATCH.validationRule-meta.xml
<ValidationRule>
    <fullName>PROGRAM_MATCH</fullName>
    <active>true</active>
    <description>The Service&#39;s Program must match the Program Engagement&#39;s Program when Program Engagement is populated.</description>
    <errorConditionFormula>AND(
!ISBLANK(ProgramEngagement__c),
!ISBLANK(Service__c),
Service__r.Program__c != ProgramEngagement__r.Program__c
)</errorConditionFormula>
    <errorMessage>The Service&#39;s Program does not match the Program Engagement&#39;s Program</errorMessage>
</ValidationRule>